# ProtonDB

./: .gitignore  CMakeLists.txt  DatabaseUtils.c  DatabaseUtils.h  Main.c  MicroDB.csproj  MicroDB.sln  ProtonDB.csproj  ProtonDB.sln  README.md  StorageEngine.c  StorageEngine.h  database_utils.c  database_utils.h  main.c  readme.txt  storage_engine.c  storage_engine.h
Assets/: desktop.ini
Document/: Client-README.md  pyproton-README.txt
ProtonDB.CLI/: CMakeLists.txt  ProtonDB.CLI.csproj  ProtonDB.CLI.sln
ProtonDB.CLI/Scripts/C/: DatabaseUtils.c  DatabaseUtils.h  StorageEngine.h
ProtonDB.CLI/Scripts/C#/: Commands.cs  Database.cs  Document.cs  Master.cs  ProtonMeta.cs  StorageEngine.cs  Token.cs
ProtonDB.CORE/: ProtonDB.CORE.csproj  ProtonDB.CORE.sln
ProtonDB.CORE/Scripts/: Collection.cs  Commands.cs  Database.cs  Document.cs  Master.cs  Parser.cs  ProtonMeta.cs  StorageEngine.cs  Token.cs
ProtonDB.Client/: ProtonDB.Client.csproj  ProtonDB.Client.sln  README.md  nuget.config
ProtonDB.Client/Scripts/: Connection.cs  Cursor.cs  ProtonDBRequest.cs  ProtonDBResponse.cs  ProtonDBSession.cs  ProtonRequest.cs  ProtonResponse.cs  ProtonSession.cs  test.cs
ProtonDB.Server/: ProtonDB.Server.csproj  ProtonDB.Server.sln  config.json  protocol.json
ProtonDB.Server/Scripts/: Collection.cs  CommandRegistry.cs  Commands.cs  Database.cs  Document.cs  Master.cs  Parser.cs  ProtonDB.cs  ProtonMeta.cs  ProtonServer.cs  ServerCommands.cs  StorageEngine.cs  Token.cs
ProtonDB.Server/Scripts/Core/: Auth.cs  Collection.cs  Database.cs  Document.cs  HashMap.cs  Meta.cs  Parser.cs  Profiles.cs  StorageEngine.cs  Strings.cs  Token.cs
ProtonDB.Server/Scripts/Server/: CommandRegistry.cs  ConfigLoader.cs  ProtonServer.cs  QueryServer.cs  QuerySession.cs  Request.cs  Response.cs  ServerConfig.cs
ProtonDB.Server/Scripts/Server/Commands/: DebugCommand.cs  FetchCommand.cs  IServerCommand.cs  LoginCommand.cs  ProfileCommand.cs  QueryCommand.cs  QuitCommand.cs
ProtonDB.Service/: ProtonDB.Service.csproj  ProtonDB.Service.sln  Worker.cs
ProtonDB.Service/.core/auth/: profileConfig.json
ProtonDB.Service/Properties/: launchSettings.json
ProtonDB.Service/Scripts/: Program.cs  Worker.cs
ProtonDB.Shell/: ProtonDB.Shell.csproj  ProtonDB.Shell.sln
ProtonDB.Shell/Scripts/: Commands.cs  Master.cs  Meta.cs  ProtonMeta.cs  Token.cs
ProtonDB.Shell/Scripts/C#/: Collection.cs  Commands.cs  Master.cs  Parser.cs  ProtonMeta.cs  Token.cs
Scripts/C/: DatabaseUtils.c  DatabaseUtils.h  StorageEngine.c  StorageEngine.h
Scripts/C#/: Clause.cs  Collection.cs  Commands.cs  Database.cs  Document.cs  Master.cs  Parser.cs  ProtonMeta.cs  StorageEngine.cs  Token.cs
Setup/: protondb-1.0.3.iss  protondb-1.0.4.iss  protondb-1.0.5.iss
StorageEngine/: CMakeLists.txt
StorageEngine/Scripts/: DatabaseUtils.c  DatabaseUtils.h  StorageEngine.c  StorageEngine.h  cJSON.h
StorageEngine/Scripts/cJSON/: cJSON.c
Wrapper/Java/: .gitignore  README-JavaDriver.md  README.md  build_and_run.bat  pom.xml
Wrapper/Java/src/com/protondb/: Connection.java  DriverQuickTest.java  ProtonDBClient.java  ProtonDBDriver.java  ProtonDBDriverTest.java  ProtonRequest.java  ProtonResponse.java  TestClient.java
Wrapper/Python/pyproton/: README.md  proton.py  samp.py
Wrapper/Python/pyproton/src/: test.py
Wrapper/cpp/: CMakeLists.txt  README.md
Wrapper/cpp/examples/helloWorld/: CMakeLists.txt  example_basic.cpp
Wrapper/cpp/examples/library_management/: CMakeLists.txt  library.cpp
Wrapper/cpp/include/protondb/: Config.hpp  Connection.hpp  Cursor.hpp  Exception.hpp  ScriptRunner.hpp
Wrapper/cpp/include/protondb/internal/: SocketHandle.hpp  SocketIO.hpp
Wrapper/cpp/src/: Connection.cpp  Cursor.cpp  Exception.cpp  ScriptRunner.cpp
Wrapper/cpp/src/internal/: SocketHandle.cpp  SocketIO.cpp
Wrapper/cpp/tests/: CMakeLists.txt  test_connection.cpp  test_cursor.cpp  test_scriptRunner.cpp
Wrapper/pyproton/: README.md  finaltest.py
Wrapper/pyproton/src/: ProtonDBclient.py  integration_test.py  protondbdriver.py  test.py
Wrapper/pyprotondb/: README.md  finaltest.py
Wrapper/pyprotondb/src/: ProtonDBclient.py  integration_test.py  protondbdriver.py  test.py
XenoC/: Program.cs  XenoC.sln
pyproton/: samp.py  test.py
pyproton/pyproton/: proton.py
